data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1202.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\90\80\80\80\00\01\03\65\6e\76\08\63\61"
    "\6c\6c\62\61\63\6b\00\00\03\82\80\80\80\00\01\00"
    "\07\88\80\80\80\00\01\04\74\65\73\74\00\01\08\81"
    "\80\80\80\00\01\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\03\40\0c\00\10\00\0b\0b"
  )
""
)